# Surface-Dipole-Library

./: .gitignore  ATOM_LABELS.md  GLASS_API.md  INPUT_GUIDE.md  PRESENTATION_SCRIPT.md  README.md  Surface_Dipole_Library_Presentation.pptx  TEST.md  TEST_ITO.md  WALKTHROUGH.md  glass_ito_analysis.py  make_ppt.py  pyproject.toml  render.yaml  walkthrough_example.md
surface_dipole_library/: __init__.py  atoms.py  dipole.py  geometry.py  glass_substrate.py  interaction.py  io.py  main.py  ranking.py
tests/: test_glass_ito.py  test_glass_tio2.py
website/: app.py
website/static/css/: style.css
website/static/js/: tool.js
website/templates/: base.html  case_studies.html  docs.html  index.html  tool.html
